k8s/base/ingress/voting-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: voting-ingress
  namespace: voting-dev

spec:
  ingressClassName: nginx
  
  rules:
    - host: voting-local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: vote
                port: 
                  number: 80

          - path: /result
            pathType: Prefix

            backend:
              service:
                name: result
                port:
                  number: 4000
